<resources>
    <string name="app_name">SimpleMVP</string>
    <string name="app_error">Error</string>
    <string name="fragment_main">main</string>
    <string name="fragment_timer">timer</string>
    <string name="fragment_events">events</string>
    <string name="main_menu_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_delay">UI update delay</string>
    <string name="settings_broadcast">Broadcasts</string>
    <string name="settings_connectivity">Connectivity</string>
    <string name="settings_power_supply">Power supply</string>
    <string name="main_toast">toast</string>
    <string name="main_snackbar">snackbar</string>
    <string name="main_snackbar_action">Ok</string>
    <string name="main_expression">Mathematical expression</string>
    <string name="main_eval">Evaluate</string>
    <string name="main_permissions">Permissions</string>
    <string name="main_perm_request">Request</string>
    <string name="main_write_perms">Write external storage</string>
    <string name="main_custom_handler_title">Custom handler</string>
    <string name="main_custom_invoke">Invoke</string>
    <string name="main_invoked">Invoked</string>
    <string name="main_activity_result">Activity result</string>
    <string name="main_select_file">Select file</string>
    <string name="main_selector_dialog_title">Select a file</string>
    <string name="info_timestamp">time</string>
    <string name="info_thread">thread</string>
    <string name="info_view">view</string>
    <string name="info_broadcast">broadcast</string>
    <string name="info_broadcast_info">info</string>
    <string name="timer_started_at">timer started at </string>
    <string name="timer_duration">duration</string>
    <string name="event_lifecycle">lifecycle</string>
    <string name="event_system">system</string>
</resources>
