<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="180dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_delay_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_delay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <SeekBar
        android:id="@+id/settings_delay"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/settings_delay_title"
        app:layout_constraintTop_toBottomOf="@id/settings_delay_title" />

    <TextView
        android:id="@+id/settings_broadcast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/settings_broadcast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/settings_delay"
        app:layout_constraintTop_toBottomOf="@id/settings_delay" />


    <android.support.v7.widget.SwitchCompat
        android:id="@+id/settings_connectivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings_connectivity"
        app:layout_constraintEnd_toEndOf="@+id/settings_broadcast"
        app:layout_constraintStart_toStartOf="@id/settings_broadcast"
        app:layout_constraintTop_toBottomOf="@id/settings_broadcast" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/settings_power_supply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings_power_supply"
        app:layout_constraintEnd_toEndOf="@+id/settings_broadcast"
        app:layout_constraintStart_toStartOf="@id/settings_broadcast"
        app:layout_constraintTop_toBottomOf="@id/settings_connectivity" />

    <Button
        android:id="@+id/settings_ok"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_power_supply" />

</android.support.constraint.ConstraintLayout>