<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="280dp">

    <android.support.constraint.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_start" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_end" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/info_title"
        style="@style/DialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_title_margin"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="customHandler" />

    <TextView
        android:id="@+id/info_time_title"
        style="@style/TextHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/info_timestamp"
        app:layout_constraintEnd_toEndOf="@id/guide_center"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/info_title" />

    <TextView
        android:id="@+id/info_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/info_time_title"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/info_time_title"
        tools:text="18:00.2355" />

    <TextView
        android:id="@+id/info_thread_title"
        style="@style/TextHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/info_thread"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_center"
        app:layout_constraintTop_toTopOf="@+id/info_time_title" />

    <TextView
        android:id="@+id/info_thread"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@+id/info_thread_title"
        app:layout_constraintTop_toBottomOf="@id/info_thread_title"
        tools:text="main" />

    <TextView
        android:id="@+id/info_view_title"
        style="@style/TextHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info_view"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/info_time" />

    <TextView
        android:id="@+id/info_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/info_view_title"
        tools:text="main_fragment" />

    <android.support.constraint.Group
        android:id="@+id/info_view_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="info_view_title,info_view"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/info_broadcast_title"
        style="@style/TextHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/info_broadcast"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/info_view" />

    <TextView
        android:id="@+id/info_broadcast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="start"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/info_broadcast_title"
        tools:text="CONNECTIVITY_ACTION" />

    <TextView
        android:id="@+id/info_broadcast_info_title"
        style="@style/TextHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/info_broadcast_info"
        app:layout_constraintEnd_toStartOf="@+id/guide_center"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/info_broadcast" />

    <TextView
        android:id="@+id/info_broadcast_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="start"
        app:layout_constraintEnd_toStartOf="@+id/guide_center"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/info_broadcast_info_title"
        tools:text="USB" />

    <android.support.constraint.Group
        android:id="@+id/info_broadcast_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="info_broadcast,info_broadcast_info,info_broadcast_info_title,info_broadcast_title"
        tools:visibility="visible" />

    <Space
        android:id="@+id/info_space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_bottom"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/info_broadcast_info" />

</android.support.constraint.ConstraintLayout>